scss/partials/_navigation_sidebar.scss
@mixin default-item(){
  background-color: transparent;
  .internal {
    @include avenir_M();
    font-size: 14px;
    line-height: 1.71;
    color: $carrot_light_gray_3;
    text-decoration: none;

    &.new {
      @include avenir_B();
    }
  }

  div.all-posts-label {
    @include avenir_H();
    font-size: 14px;
    line-height: 1.71;
    color: $carrot_light_gray_3;
    text-decoration: none;

    &.new {
      @include avenir_B();
    }
  }
}

@mixin item-selected(){
  background-color: $carrot_light_blue_2;
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  .internal, div.all-posts-label {
    color: $carrot_text_blue_3;
    @include avenir_H();
    font-size: 14px;
    line-height: 1.71;
    text-decoration: none;
  }
}

@mixin item-selected-hover(){
  background-color: rgba($carrot_light_gray_4, 0.2);
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  .internal {
    color: $carrot_dark_gray;
    @include avenir_M();
    font-size: 14px;
    line-height: 1.71;
    text-decoration: none;

    &.new {
      @include avenir_B();
    }
  }

  div.all-posts-label {
    color: $carrot_dark_gray;
    @include avenir_H();
    font-size: 14px;
    line-height: 1.71;
    text-decoration: none;

    &.new {
      @include avenir_B();
    }
  }
}

div.left-navigation-sidebar {
  position: absolute;
  position: fixed;
  max-height: calc(100vh - 122px);
  overflow-y: auto;
  overflow-x: visible;
  padding-bottom: 20px;
  width: #{$left_navigation_sidebar_width}px;
  top: 118px;
  left: 0px;
  height: calc(100vh - 118px);
  @include no-user-select();

  div.left-navigation-sidebar-content {
    padding-bottom: 32px; 
  }

  a.all-posts {
    display: block;
    background-color: transparent;
    border: none;
    outline: none;
    margin-bottom: 16px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    padding-left: 32px;

    &.hover-item{
      @include default-item();

      * {
        cursor: pointer;
      }

      &:not(.item-selected):hover {
        @include item-selected-hover();
      }

      &.item-selected {
        @include item-selected();
      }
    }

    div.all-posts-label {
      padding: 5px 5px 0 5px;
      width: 148px;
      text-align: left;
      margin-left: 16px;
    }

    div.all-posts-icon {
      background-image: cdnUrl("/img/ML/activity_hamburger.svg");
      background-size: 12px 11px;
      width: 12px;
      height: 11px;
      float: left;
      margin-left: 0px;
      margin-top: 8px;
    }
  }

  div.left-navigation-sidebar-top{

    .left-navigation-sidebar-top-title {
      padding: 3px 0 2px 32px;
      margin: 0;
      margin-bottom: 16px;

      span {
        @include avenir_B();
        font-size: 13px;
        color: $carrot_gray;
        float: left;
        margin-left: 21px;
        cursor: default;
      }

      div.boards-icon {
        background-size: 12px 10px;
        background-repeat: no-repeat;
        width: 12px;
        height: 10px;
        float: left;
        margin-right: 7px;
        margin-top: 0px;
        background-image: cdnUrl("/img/ML/boards_icon.svg");
      }
    }

    button.left-navigation-sidebar-top-title-button {
      width: 20px;
      height: 20px;
      margin-right: 0px;
      margin-top: -5px;
      float: right;
      padding: 0;
      cursor: pointer;
      transition: 230ms;
      background-color: #F0EFEA;
      background-image: cdnUrl("/img/ML/plus_button_icon.svg");
      background-repeat: no-repeat;
      background-position: 50%;
      background-size: 8px 8px;
      border-radius: 10px;
      @include avenir_H();

      &:hover, &.active {
        background-color: $carrot_green_2;
        background-image: cdnUrl("/img/ML/plus_button_icon_white.svg");
      }

      @include preload_image(cdnUrl("/img/ML/plus_button_icon_white.svg"));
    }
  }

  div.left-navigation-sidebar-items{

    // div.left-navigation-sidebar-draft {
    //   margin-top: 24px;
    // }

    a.left-navigation-sidebar-item {
      display: block;
      cursor: default;
      border-top-right-radius: 3px;
      border-bottom-right-radius: 3px;
      padding-left: 24px;
      margin: 0;

      &:last-child {
        margin-bottom: 16px;
      }

      &.hover-item {
        @include default-item();
        * {
          cursor: pointer;
        }

        &:not(.item-selected):hover {
          @include item-selected-hover();
        }

        &.item-selected {
          @include item-selected();
        }
      }

      img.public {
        float: left;
        margin-left: 6px;
        margin-top: 5px;
        width: 16px;
        height: 16px;
      }

      img.private{
        float: left;
        margin-left: 9px;
        margin-top: 5px;
        width: 10px;
        height: 14px;
      }

      div.board-name {
        margin-left: 24px;

        div.internal {
          padding: 3px 5px 0 5px;
          white-space: nowrap;
          text-overflow: ellipsis;
          overflow: hidden;
          width: 133px;
          float: left;
          cursor: pointer;

          .emojione {
            @include emoji-size(12);
          }
        }
      }
    }
  }

  div.left-navigation-sidebar-footer {
    margin-left: 20px;
    position: relative;
    bottom: 16px;

    button.about-carrot-btn {
      @include avenir_M();
      margin-top: 4px;
      &:hover {
        text-decoration: underline;
      }

      div.about-carrot-icon {
        background-image: cdnUrl("/img/ML/carrot_grey.svg");
        background-size: 16px 16px;
        width: 16px;
        height: 16px;
        margin-right: 5px;
        float: left;
        margin-top: 1px;
      }

      span {
        font-size: 14px;
        line-height: 1.71;
        color: $oc_gray_7;
        margin-left: 5px;
      }
    }

    button.invite-people-btn {
      @include avenir_M();

      &:hover {
        text-decoration: underline;
      }

      div.invite-people-icon {
        background-image: cdnUrl("/img/ML/invite_people.svg");
        background-size: 16px 16px;
        width: 16px;
        height: 16px;
        margin-right: 5px;
        float: left;
        margin-top: 1px;
      }

      span {
        font-size: 14px;
        line-height: 1.71;
        color: $oc_gray_7;
        margin-left: 5px;
      }
    }
  }
}

